nodejs-tekton-guide/cicd/tekton-pipeline/el-build/event-listener-nodejs-tekton-guide-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventlistener: event-listener-nodejs-tekton-guide
  name: el-event-listener-nodejs-tekton-guide
spec:
  host: el-event-listener-nodejs-tekton-guide-user-joske.apps.tocp4.arbetsformedlingen.se
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-event-listener-nodejs-tekton-guide
    weight: 100
  wildcardPolicy: None
